--- a/platform/ui/src/components/tableList/TableList.styl
+++ b/platform/ui/src/components/tableList/TableList.styl
@@ -1,10 +1,11 @@
 
-$headerRowHeight = 63px
+$headerRowHeight = 53px
 
 .tableList
   background-color: var(--primary-background-color)
   height: 100%;
   width: 100%;
+  padding-top: 10px;
 
   .tableListHeader
     background-color: var(--ui-gray-darker)
@@ -19,7 +20,7 @@ $headerRowHeight = 63px
     .tableListHeaderTitle
       color: var(--text-secondary-color)
       max-width: 230px
-      font-size: 22px
+      font-size: 18px
       font-weight: 300
       line-height: $headerRowHeight
       padding: 0 10px
@@ -42,10 +43,10 @@ $headerRowHeight = 63px
 
     .numberOfItems
       color: var(--ui-sky-blue)
-      float: right
-      font-weight: 300
-      font-size: 40px
       max-width: 54px
-      height: $headerRowHeight
-      line-height: 66px
+      font-size: 18px
+      font-weight: 300
+      line-height: $headerRowHeight
+      padding: 0 10px
+      text-align: right
       flex: 1;
